Updated: Lesson 7: JSBasic and Lesson 8: Flow Control

--- a/Sem1/7_JSBasic/lecture/jsbasic.html
+++ b/Sem1/7_JSBasic/lecture/jsbasic.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <h1>JS Basics</h1>
-
-
-
+    <h2>Operators</h2>
     <script>
         console.log("Hello, world!");
 
@@ -25,6 +23,29 @@
 
     console.log("The student name is:",studentName)
     console.log("The value of PI is:",PI)
+
+    console.log("SIMPLE OPERATION")
+    let x = 3;
+    let y = 5;
+
+    x += y;
+    console.log(x,y);
+
+    console.log("STRING OPERATION")
+    let str_x = "Hello";
+    let str_y = "World";
+
+    console.log(str_x + " " + str_y + "!");
+
+    console.log("COMPARATIVE OPERATION")
+    console.log(2 == '2')
+    console.log(2 === '2')
+    console.log(2 != 3)
+    console.log(2 <= 2)
+
+
+    console.log("LOGICAL OPERATION")
+
     </script>
 </body>
 </html>
