--- a/Sem1/Sem1FinalProject/landingPage.html
+++ b/Sem1/Sem1FinalProject/landingPage.html
@@ -3,9 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to the songs :3</title>
+    <title>Welcome to the website :3</title>
+    <link rel="stylesheet" href="./landingPage.css">
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta+Malar:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="nav-bar">
+            <div class="logo">
+                <a href="" class="clickable">
+                    <img src="./assets/cate2.png" alt="">
+                    <p>Catify</p>
+                </a>
+                <!-- <a>Catify</a> -->
+            </div>
+
+            <div class="navigation">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Sign up</a>
+                <a href="">Log in</a>
+            </div>
+        </div>
+        
+        <div class="banner">
+            <h2>Listen to the Meow-sic you choose</h2>
+            <!-- <img src="./assets/" alt=""> -->
+            <div class="landing-button">
+                <a class="join-now" href="">Join now</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container2">
+        <h2>REFERENCES</h2>
+        <div class="references">
+            <img src="./assets/1667px-Figma-logo.svg.png" alt="">
+            <img src="./assets/Spotify_Logo_RGB_Green.png" alt="">
+            <img src="./assets/SoundCloud-Logo.png" alt="">
+        </div>
+    </div>
+
+    <footer class="credit">
+        <p>© a template designed by Pham Ngoc Lam</p>
+    </footer>
 </body>
 </html>
