--- a/Sem1/12_ES6/ES6.html
+++ b/Sem1/12_ES6/ES6.html
@@ -87,6 +87,32 @@
             return currentTotal + num;
         }, 0);
         console.log(totalArr);
+
+        const carts = [
+            {
+                id: 1,
+                title: 'Gaming PC',
+                quantity: 10,
+                price: 10000,
+            },
+            {
+                id: 2,
+                title: 'Keyboard',
+                quantity: 5,
+                price: 500,
+            },
+            {
+                id: 3,
+                title: 'Mouse',
+                quantity: 2,
+                price: 300,
+            }
+        ]
+
+        const sumOfCarts = carts.reduce(
+            (acc, {quantity, price}) => acc + quantity + price,
+            0
+        );
     </script>
 </body>
 </html>
