Sem 1 Final Project ver 1.0

--- a/Sem1/Sem1FinalProject/landingPage.html
+++ b/Sem1/Sem1FinalProject/landingPage.html
@@ -27,14 +27,13 @@
                     <img src="./assets/cate2.png" alt="">
                     <p>Catify</p>
                 </a>
-                <!-- <a>Catify</a> -->
             </div>
 
             <div class="navigation">
                 <a href="">Home</a>
                 <a href="">About</a>
-                <a href="">Sign up</a>
-                <a href="">Log in</a>
+                <a href="./signup.html">Sign up</a>
+                <a href="./login.html">Log in</a>
             </div>
         </div>
         
@@ -42,7 +41,7 @@
             <h2>Listen to the Meow-sic you choose</h2>
             <!-- <img src="./assets/" alt=""> -->
             <div class="landing-button">
-                <a class="join-now" href="">Join now</a>
+                <a class="join-now" href="./signup.html">Join now</a>
             </div>
         </div>
     </div>
@@ -50,7 +49,7 @@
     <div class="container2">
         <h2>REFERENCES</h2>
         <div class="references">
-            <img src="./assets/1667px-Figma-logo.svg.png" alt="">
+            <img src="./assets/figma-logo.png" alt="">
             <img src="./assets/Spotify_Logo_RGB_Green.png" alt="">
             <img src="./assets/SoundCloud-Logo.png" alt="">
         </div>
