Sem1 Project Final Version

--- a/Sem1/Sem1FinalProject/signup.html
+++ b/Sem1/Sem1FinalProject/signup.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catify Signup</title>
-    <!-- FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mukta+Malar:wght@200;300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
 
-    <link rel="stylesheet" href="signup.css">
-    <script defer src="signup.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Catify Signup</title>
+  <!-- FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mukta+Malar:wght@200;300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="signup.css">
+  <script defer src="signup.js"></script>
 </head>
+
 <body>
-    <div class="container">
-      <form action="" id="form">
-        <h1>Registration Form</h1>
-        <div class="box">
-          <label for="username">Username</label>
-          <input id="username" name="username" type="text">
-          <div class="error"></div>
-        </div>
-        <div class="box">
-          <label for="password">Password</label>
-          <input id="password" name="password" type="password">
-          <div class="error"></div>
-        </div>
-        <div class="box">
-          <label for="password">Confirm Password</label>
-          <input id="psw" name="psw" type="password">
-          <div class="error"></div>
-        </div>
-        <button type="submit" id="btn">Register Now</button>
-        <div class="link">
-          <a href="login.html">Already have an account</a>
-        </div>
-      </form>
-    </div>
-    <script src="signup.js"></script>
-  </body>
+  <div class="nav-bar">
+    <a href="./landingPage.html" class="clickable">
+      <img src="./assets/cate2.png" alt="">
+      <p>Catify</p>
+    </a>
+  </div>
+  <div class="container">
+    <form action="" id="form">
+      <h1>Registration Form</h1>
+      <div class="box">
+        <label for="username">Username</label>
+        <input id="username" name="username" type="text">
+        <div class="error"></div>
+      </div>
+      <div class="box">
+        <label for="password">Password</label>
+        <input id="password" name="password" type="password">
+        <div class="error"></div>
+      </div>
+      <div class="box">
+        <label for="password">Confirm Password</label>
+        <input id="psw" name="psw" type="password">
+        <div class="error"></div>
+      </div>
+      <button type="submit" id="btn">Register Now</button>
+      <div class="link">
+        <a href="login.html">Already have an account</a>
+      </div>
+    </form>
+  </div>
+  <script src="signup.js"></script>
+</body>
+
 </html>
