--- a/Sem1/Sem1FinalProject/landingPage.html
+++ b/Sem1/Sem1FinalProject/landingPage.html
@@ -30,8 +30,8 @@
             </div>
 
             <div class="navigation">
-                <a href="">Home</a>
-                <a href="">About</a>
+                <a href="./landingPage.html">Home</a>
+                <a href="./about.html">About</a>
                 <a href="./signup.html">Sign up</a>
                 <a href="./login.html">Log in</a>
             </div>
