--- a/Sem1/Sem1FinalProject/login.html
+++ b/Sem1/Sem1FinalProject/login.html
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <div class="nav-bar">
+        <a href="./landingPage.html" class="clickable">
+          <img src="./assets/cate2.png" alt="">
+          <p>Catify</p>
+        </a>
+      </div>
     <div class="container">
         <div class="logo">
                 <img src="./assets/cate2.png" alt="">
