Semester 1 Final Project Ver 2.0: After Feedback

--- a/Sem1/Sem1FinalProject/menu2.html
+++ b/Sem1/Sem1FinalProject/menu2.html
@@ -44,9 +44,19 @@
 
                 </button>
                 <button class="next"><img src="./assets/songs/next.png" alt=""></button>
-
+                
             </div>
         </div>
+        <footer class="bottom">
+            <img src="./cats/cat1.gif" alt="">
+            <img src="./cats/cat2.gif" alt="">
+            <img src="./cats/cat3.gif" alt="">
+            <img src="./cats/cat4.gif" alt="">
+            <img src="./cats/cat5.gif" alt="">
+            <img src="./cats/cat6.gif" alt="">
+            <img src="./cats/cat7.gif" alt="">
+            <img src="./cats/cat8.gif" alt="">
+        </footer>
     </div>
 
     <!-- SCRIPT -->
