--- a/Sem1/Sem1RetakeTest/Problem2/problem2.html
+++ b/Sem1/Sem1RetakeTest/Problem2/problem2.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problem 2</title>
     <link rel="stylesheet" href="problem2.css">
 </head>
+
 <body>
     <div class="container">
-        <div class="title">
-            <h6>Bộ chọn màu</h6>
-        </div>
+        <h6>Bộ chọn màu</h6>
 
         <div class="colors" id="colors">
-            <div class="color-display">
-
-            </div>
-
-            <div class="color-picker">
+            <div id="color-display">
 
             </div>
         </div>
 
         <div class="color-slider">
-
+            <input type="color" name="" id="color">
         </div>
 
         <div class="color-info">
-            
+            <input type="text" id="hex">
+            <button onclick="copy()">Copy</button>
         </div>
     </div>
     <script src="problem2.js"></script>
 </body>
+
 </html>
